Fixed spacing

--- a/src/main/webapp/events.css
+++ b/src/main/webapp/events.css
@@ -29,7 +29,7 @@
 	float: left;
 }
 .events .project {
-	margin-right: 0.4em;
+	margin-right: 15px;
 	width: 25%;
 	text-align: right;
 }
